// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering renders a certificate without a death date 1`] = `
<a
  className="p-a300 br br-t100 b--w result"
  data-jsx={1723197323}
  href="/death/certificate/000003"
  onClick={[Function]}
>
  <div
    className="t--sans"
    data-jsx={1723197323}
    style={
      Object {
        "fontStyle": "normal",
        "fontWeight": "bold",
        "letterSpacing": 1.4,
      }
    }
  >
    Monkey
     
    Joe
  </div>
  <div
    data-jsx={1723197323}
  >
    Died: 
    2004
     Age: 
    6
  </div>
</a>
`;

exports[`rendering renders a pending certificate 1`] = `
<a
  className="p-a300 br br-t100 b--w result"
  data-jsx={1723197323}
  href="/death/certificate/000001"
  onClick={[Function]}
>
  <div
    className="t--sans"
    data-jsx={1723197323}
    style={
      Object {
        "fontStyle": "normal",
        "fontWeight": "bold",
        "letterSpacing": 1.4,
      }
    }
  >
    Logan
     
    Howlett
  </div>
  <div
    data-jsx={1723197323}
  >
    Died: 
    4/15/2014
     Age: 
    44 yrs. 2 mos. 10 dys
  </div>
  <div
    data-jsx={1723197323}
  >
    Certificate Pending
  </div>
</a>
`;

exports[`rendering renders a typical certificate 1`] = `
<a
  className="p-a300 br br-t100 b--w result"
  data-jsx={1723197323}
  href="/death/certificate/000002"
  onClick={[Function]}
>
  <div
    className="t--sans"
    data-jsx={1723197323}
    style={
      Object {
        "fontStyle": "normal",
        "fontWeight": "bold",
        "letterSpacing": 1.4,
      }
    }
  >
    Bruce
     
    Banner
  </div>
  <div
    data-jsx={1723197323}
  >
    Died: 
    3/4/2016
     Age: 
    21 yrs.
  </div>
</a>
`;
